# shadertoys

./: .gitignore  COPYING.txt  QUICKREF.txt  README.md  extract_pixels.py  generate_shadertoy_multipass.py  main.py  pyproject.toml  quickstart.sh
.github/: copilot-instructions.md
bad_apple/: Makefile  README.md  analyze_video.py  dl_video.sh  gen_sample.sh  train_nn.py
doom/: doom.ref.glsl  e1m1x-769.lmp  e1m1x-769.txt  main.py
src/shadertoys/: __init__.py  nn.py  shader.py  video.py
src/shadertoys/templates/: buffer_a.fs  image.fs
