[project]
name = "shadertoys"
version = "0.1.0"
description = "Bad Apple video compression using tiny neural network for Shadertoy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python-headless>=4.13.0.92",
    "polars>=1.38.1",
    "tqdm>=4.67.3",
    "torch>=2.5.0",
    "numpy>=2.0.0",
    "jinja2>=3.1.6",
    "pillow>=12.1.1",
    "py2glsl",
]

[project.scripts]
shadertoys_extract_pixels = "shadertoys.bin.extract_pixels:main"
shadertoys_train_nn = "shadertoys.bin.train_nn:main"
shadertoys_generate_shaders = "shadertoys.bin.generate_shaders:main"
shadertoys_render_nn = "shadertoys.bin.render_nn:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
py2glsl = { git = "https://github.com/alexeykarnachev/py2glsl.git" }
